feat: update site details (terms of use, landing page, about page) and color theme

--- a/src/pages/_app/globals.scss
+++ b/src/pages/_app/globals.scss
@@ -10,8 +10,8 @@
 // $accent: #3fe899;
 
 :root {
-  --c-primary: #e83f43;
-  --c-accent: #3fe899;
+  --c-primary: #5c710eff;
+  --c-accent: #726f76;
 }
 
 //Annotation Tool
