--- a/src/features/home/styles.module.scss
+++ b/src/features/home/styles.module.scss
@@ -5,7 +5,7 @@
   text-align: justify;
   h3 {
     :first-child {
-      background-color: #ef4444;
+      background-color: #5c710eff;
       padding: 0.3rem;
       margin-right: 0.4rem;
       color: white;
@@ -25,7 +25,7 @@
 }
 
 .prize {
-  background: #ef4444;
+  background: #5c710eff;
   width: 280px;
   height: 200px;
   padding: 2rem;
