--- a/src/ui/buttons/buttonOutline/styles.module.css
+++ b/src/ui/buttons/buttonOutline/styles.module.css
@@ -3,6 +3,7 @@
   @apply transition-colors duration-500 ease-in-out;
 }
 
-.buttonRed {
-  @apply bg-transparent hover:bg-red-500 text-red-500 hover:text-white border-red-500;
+.buttonPrimary {
+  @apply bg-transparent text-primary border-primary;
+  @apply hover:bg-primary hover:text-white;
 }
