fix: ui changes, no functional edits

--- a/src/pages/_app/globals.scss
+++ b/src/pages/_app/globals.scss
@@ -10,8 +10,12 @@
 // $accent: #3fe899;
 
 :root {
-  --c-primary: #5c710eff;
+  --c-primary: #5b2333;
   --c-accent: #726f76;
+}
+
+body {
+  background-color: #F8F7F9;
 }
 
 //Annotation Tool
