--- a/src/features/home/styles.module.scss
+++ b/src/features/home/styles.module.scss
@@ -5,7 +5,7 @@
   text-align: justify;
   h3 {
     :first-child {
-      background-color: #5c710eff;
+      background-color: #5b2333;
       padding: 0.3rem;
       margin-right: 0.4rem;
       color: white;
@@ -25,10 +25,10 @@
 }
 
 .prize {
-  background: #5c710eff;
-  width: 280px;
-  height: 200px;
-  padding: 2rem;
+  background: #5b2333;
+  width: 350px;
+  height: 125px;
+  padding: 1rem;
   border-radius: 10px;
   margin: 1rem;
   margin-top: 0rem;
