--- a/src/features/footerMain/styles.module.css
+++ b/src/features/footerMain/styles.module.css
@@ -1,5 +1,5 @@
 .button {
-  @apply bg-transparent hover:bg-white text-white font-semibold hover:text-gray-800 py-2 px-4 border border-white hover:border-transparent rounded;
+  @apply bg-transparent hover:bg-white text-white font-semibold hover:text-[#1d1d1d] py-2 px-4 border border-white hover:border-transparent rounded;
   @apply transition-colors duration-500 ease-in-out;
   margin-right: 1rem;
   margin-top: 1rem;
