--- a/src/features/home/styles.module.scss
+++ b/src/features/home/styles.module.scss
@@ -5,7 +5,7 @@
   text-align: justify;
   h3 {
     :first-child {
-      background-color: #5b2333;
+      background-color: #004aad;
       padding: 0.3rem;
       margin-right: 0.4rem;
       color: white;
@@ -25,7 +25,7 @@
 }
 
 .prize {
-  background: #5b2333;
+  background: #004aad;
   width: 350px;
   height: 125px;
   padding: 1rem;
