--- a/src/features/navbarMain/styles.module.css
+++ b/src/features/navbarMain/styles.module.css
@@ -4,5 +4,5 @@
 
 .ul > li,
 .ul > button {
-  @apply transition-colors ease-in duration-75 hover:text-white hover:bg-gray-800 px-5 cursor-pointer;
+  @apply transition-colors ease-in duration-75 hover:text-white hover:bg-[#1d1d1d] px-5 cursor-pointer;
 }
