--- a/src/pages/_app/globals.scss
+++ b/src/pages/_app/globals.scss
@@ -10,8 +10,8 @@
 // $accent: #3fe899;
 
 :root {
-  --c-primary: #5b2333;
-  --c-accent: #726f76;
+  --c-primary: #004aad;
+  --c-accent: #1d1d1d;
 }
 
 body {
